k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-java
  template:
    metadata:
      labels:
        app: demo-java
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: demo-java
          image: walterbamac/demo-devops-java:latest
          ports:
            - containerPort: 8080

          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
