k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-java
spec:
  selector:
    app: demo-java
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
